Added a new transformer model which breaks the sequence down into (2x2) patches

--- a/TransformerSampler.ipynb
+++ b/TransformerSampler.ipynb
@@ -267,7 +267,7 @@
     "\n",
     "            #this line took like 1 hour to write I'm so sad\n",
     "            #the cache has to be shaped such that the batch parts line up\n",
-    "            cache=cache.repeat(1,1,L//D,1,1).transpose(2,3).reshape(2,L,B*L//D,cache.shape[-1])\n",
+    "            cache=cache.repeat(1,1,L//D,1,1).transpose(2,3).reshape(cache.shape[0],L,B*L//D,cache.shape[-1])\n",
     "\n",
     "            pred0 = self.lin(out.transpose(1,0))\n",
     "            ones = sample*pred0\n",
@@ -415,7 +415,61 @@
     "            input[idx,:,:]=sample\n",
     "        #input's first entry is zero to get a predction for the first atom\n",
     "        #print(\".\",end=\"\")\n",
-    "        return input.transpose(1,0)[:,1:,:]"
+    "        return input.transpose(1,0)[:,1:,:]\n",
+    "    \n",
+    "    \n",
+    "#functions below aren't really necessary anymore since there was no issue with masking (they serve to avoid using a mask)\n",
+    "    def reset(self,B):\n",
+    "        \"\"\"Setup for an autoregressive transformer\"\"\"\n",
+    "        self._input = torch.zeros([self.L+1,B,1],device=self.device)\n",
+    "        self._cache=None\n",
+    "        self._i=0\n",
+    "        return self.getnext(0)\n",
+    "    def getnext(self,vect):\n",
+    "        \"\"\"Get probability for the next output in an autoregressive transformer\"\"\"\n",
+    "        self._input[self._i,:,:]=vect\n",
+    "        self._i+=1\n",
+    "        encoded_input = self._input[:self._i,:,:]+self.pe_t[:self._i,:,:]\n",
+    "        output,self._cache = self.next_with_cache(encoded_input,self._cache)\n",
+    "        probs=self.lin(output[-1,:,:])\n",
+    "        return probs\n",
+    "    def testsample(self,B,L,random=False):\n",
+    "        \"\"\"Generate states with their probabilities in logscale\"\"\"\n",
+    "        #set up variables\n",
+    "        probs=self.reset(B).squeeze(0)\n",
+    "        sprobs=torch.zeros([B],device=self.device)\n",
+    "        samples = torch.zeros([B,L,1],device=self.device)\n",
+    "        with torch.no_grad():\n",
+    "          for idx in range(L):\n",
+    "            #loop through L sequence elements and generate next in sequence based off of probabilities\n",
+    "            rng = torch.rand([B,1],device=device)\n",
+    "            if random:\n",
+    "                sample = (rng<=0.5).to(torch.float32)\n",
+    "            else:\n",
+    "                sample = (rng<=probs).to(torch.float32)\n",
+    "            samples[:,idx]=sample\n",
+    "            sprobs+=torch.log(sample*probs+(1-sample)*(1-probs)).squeeze(1)\n",
+    "            if idx!=L-1: probs = self.getnext(sample)\n",
+    "        return samples,sprobs\n",
+    "    \n",
+    "    def testlabels(self,samples,B,L,D=1):\n",
+    "        \"\"\"Get logscale probabilities of all states with one spin flipped at position j\"\"\"\n",
+    "        with torch.no_grad():\n",
+    "            print(\"|\",end=\"\")\n",
+    "            B,L,one=samples.shape\n",
+    "            logprobs=torch.zeros([B,L],device=self.device)\n",
+    "            for k in range(L):\n",
+    "                #loop cross L flipped states (batched)\n",
+    "                probs=self.reset(B).squeeze(0)\n",
+    "                sprobs = torch.zeros([B],device=self.device)\n",
+    "                #loop across sequence\n",
+    "                for idx in range(L):\n",
+    "                    #kth state is flipped\n",
+    "                    sample = samples[:,idx] if idx!=k else 1-samples[:,idx]\n",
+    "                    sprobs+=torch.log(sample*probs+(1-sample)*(1-probs)).squeeze(1)\n",
+    "                    if idx!=L-1: probs = self.getnext(sample)\n",
+    "                logprobs[:,k]=sprobs\n",
+    "        return samples,logprobs"
    ]
   },
   {
