Modified save function to work with torch.jit.script models

--- a/Patched-TF.ipynb
+++ b/Patched-TF.ipynb
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "47612f64",
+   "id": "237344bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e5cd48a1",
+   "id": "1409d237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3f02ae30",
+   "id": "f30aef3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 9,  6,  2,  4,  1,  2,  5, 14], device='cuda:0')\n",
+      "tensor([ 8, 15, 10,  1, 15,  4,  2,  8], device='cuda:0')\n",
       "torch.Size([8, 4])\n"
      ]
     }
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f686b5b8",
+   "id": "da9810fe",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "591a1883",
+   "id": "96504cb6",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "849a5ec1",
+   "id": "e2701a55",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0fc61724",
+   "id": "129811a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e4d18719",
+   "id": "5f4a0970",
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "29c1a7d1",
+   "id": "679b0c5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4e0f139d",
+   "id": "88dd0f9f",
    "metadata": {},
    "outputs": [
     {
@@ -1028,14 +1028,13 @@
     "op.dir=\"PTF\"\n",
     "#op.steps=100\n",
     "op.NLOOPS=8\n",
-    "\n",
     "print(op)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "60100964",
+   "id": "c37ceae9",
    "metadata": {
     "scrolled": false
    },
@@ -1063,7 +1062,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8fb059c",
+   "id": "9da6a3f2",
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1072,7 @@
       "Training. . .\n",
       "Output folder path established\n",
       "-0.40522 64\n",
-      "0,2.64|56,-0.37|109,-0.38|162,-0.40|215,-0.41|268,-0.40|321,-0.40|375,-0.41|428,-0.41|483,-0.41|537,-0.41|"
+      "0,2.40|55,-0.37|108,-0.38|161,-0.40|214,-0.40|267,-0.41|321,-0.41|374,-0.41|427,-0.41|480,-0.41|534,-0.41|587,-0.38|640,-0.41|694,-0.41|747,-0.40|800,-0.41|853,-0.41|907,-0.41|982,-0.40|1057,-0.41|1117,-0.41|"
      ]
     }
    ],
@@ -1088,7 +1087,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cf43d05",
+   "id": "510c1838",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mydir = setup_dir(op)\n",
+    "#tst=torch.jit.load(mydir+\"/T\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f7be8fa",
    "metadata": {},
    "outputs": [],
    "source": []
