--- a/Patched-TF.ipynb
+++ b/Patched-TF.ipynb
@@ -653,7 +653,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 7,  0, 10, 11, 13,  3,  5,  1], device='cuda:0')\n",
+      "tensor([ 2,  5,  4, 15,  3,  7, 10,  5], device='cuda:0')\n",
       "torch.Size([8, 4])\n"
      ]
     }
@@ -1033,6 +1033,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "18cbff00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system(\"python Patched_TF.py \"+op.cmd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c39619d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "op.USEQUEUE=1\n",
+    "op.Q=4\n",
+    "op.K=32\n",
+    "op.kl=0.25\n",
+    "for x in range(15):\n",
+    "    os.system(\"python Patched_TF.py \"+op.cmd())\n",
+    "    \n",
+    "op.USEQUEUE=0\n",
+    "op.Q=1\n",
+    "op.K=32\n",
+    "op.kl=0.0\n",
+    "for x in range(15):\n",
+    "    os.system(\"python Patched_TF.py \"+op.cmd())\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69266be8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1/0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "ad96476d",
    "metadata": {
@@ -1043,13 +1086,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sprag\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\jit\\_recursive.py:242: UserWarning: 'batch_first' was found in ScriptModule constants, but was not actually set in __init__. Consider removing it.\n",
+      "C:\\Users\\sprag\\anaconda3\\envs\\pytorch\\lib\\site-packages\\torch\\jit\\_recursive.py:229: UserWarning: 'batch_first' was found in ScriptModule constants, but was not actually set in __init__. Consider removing it.\n",
       "  \"Consider removing it.\".format(name))\n"
      ]
     }
    ],
    "source": [
-    "trainsformer = m = torch.jit.script(PatchTransformerB(Lx,Nh=op.Nh,num_layers=2))\n",
+    "trainsformer = torch.jit.script(PatchTransformerB(Lx,Nh=op.Nh,num_layers=2))\n",
     "sampleformer= PatchTransformerB(Lx,Nh=op.Nh,num_layers=2)\n",
     "beta1=0.9;beta2=0.999\n",
     "optimizer = torch.optim.Adam(\n",
@@ -1061,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "f34a36d5",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1115,7 @@
       "Training. . .\n",
       "Output folder path established\n",
       "-0.40522 64\n",
-      "0,2.33|55,-0.37|107,-0.39|160,-0.40|213,-0.40|266,-0.41|318,-0.41|371,-0.41|424,-0.40|477,-0.41|530,-0.40|583,-0.40|636,-0.41|"
+      "0,2.55|28,-0.37|53,-0.38|78,-0.40|103,-0.40|128,-0.40|153,-0.41|178,-0.40|203,-0.41|229,-0.41|254,-0.41|279,-0.41|304,-0.40|330,-0.41|355,-0.41|380,-0.41|405,-0.41|431,-0.41|457,-0.41|482,-0.41|508,-0.41|534,-0.41|559,-0.41|585,-0.41|610.4869220256805 12000\n"
      ]
     }
    ],
@@ -1086,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "fdd565c8",
    "metadata": {},
    "outputs": [],
