Added test class for the patched transformer

--- a/Patched-TF.ipynb
+++ b/Patched-TF.ipynb
@@ -254,7 +254,7 @@
     "                src,#only do attention with the last elem of the sequence\n",
     "                tgt,\n",
     "                tgt,\n",
-    "                attn_mask=mask,  # not needed because we only care about the last token\n",
+    "                attn_mask=mask,  \n",
     "                key_padding_mask=None,\n",
     "            )[0]\n",
     "            #straight from torch transformer encoder code\n",
@@ -622,7 +622,7 @@
     "    def sample_with_labels(self,B,L,grad=False,nloops=1):\n",
     "        # type: (int,int,bool,int) -> Tuple[Tensor,Tensor]\n",
     "        sample=self.sample(B,L,None)\n",
-    "        return self._off_diag_labels(sample,B,L,grad,nloops)"
+    "        return self._off_diag_labels(sample,B,L,grad,nloops)\n"
    ]
   },
   {
@@ -653,7 +653,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 2,  5,  4, 15,  3,  7, 10,  5], device='cuda:0')\n",
+      "tensor([ 0, 14, 14, 14, 14,  9,  8, 14], device='cuda:0')\n",
       "torch.Size([8, 4])\n"
      ]
     }
@@ -992,14 +992,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L                             \t\t\t64\n",
+      "L                             \t\t\t256\n",
       "Q                             \t\t\t1\n",
-      "K                             \t\t\t128\n",
-      "B                             \t\t\t128\n",
+      "K                             \t\t\t256\n",
+      "B                             \t\t\t256\n",
       "TOL                           \t\t\t0.15\n",
       "M                             \t\t\t0.9\n",
       "USEQUEUE                      \t\t\t0\n",
-      "NLOOPS                        \t\t\t8\n",
+      "NLOOPS                        \t\t\t32\n",
       "hamiltonian                   \t\t\tRydberg\n",
       "steps                         \t\t\t12000\n",
       "dir                           \t\t\tPTF\n",
@@ -1012,13 +1012,13 @@
    ],
    "source": [
     "op=Opt()\n",
-    "Lx=8\n",
+    "Lx=16\n",
     "op.L=Lx*Lx\n",
     "op.Nh=128\n",
     "op.lr=5e-4\n",
     "op.M=0.9\n",
     "op.Q=1\n",
-    "op.K=128\n",
+    "op.K=256\n",
     "op.USEQUEUE=0\n",
     "op.kl=0.0\n",
     "#op.apply(sys.argv[1:])\n",
@@ -1027,56 +1027,77 @@
     "#op.steps=4000\n",
     "op.dir=\"PTF\"\n",
     "#op.steps=100\n",
-    "op.NLOOPS=8\n",
+    "op.NLOOPS=32\n",
     "print(op)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18cbff00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.system(\"python Patched_TF.py \"+op.cmd())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c39619d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "op.USEQUEUE=1\n",
-    "op.Q=4\n",
-    "op.K=32\n",
-    "op.kl=0.25\n",
-    "for x in range(15):\n",
-    "    os.system(\"python Patched_TF.py \"+op.cmd())\n",
-    "    \n",
-    "op.USEQUEUE=0\n",
-    "op.Q=1\n",
-    "op.K=32\n",
-    "op.kl=0.0\n",
-    "for x in range(15):\n",
-    "    os.system(\"python Patched_TF.py \"+op.cmd())\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69266be8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1/0"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
+   "id": "24754787",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#os.system(\"python Patched_TF.py \"+op.cmd())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5ed2adb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if False:\n",
+    "    op.USEQUEUE=1\n",
+    "    op.Q=4\n",
+    "    op.K=32\n",
+    "    op.kl=0.5\n",
+    "    for x in range(15):\n",
+    "        os.system(\"python Patched_TF.py \"+op.cmd())\n",
+    "\n",
+    "    op.USEQUEUE=1\n",
+    "    op.Q=4\n",
+    "    op.K=32\n",
+    "    op.kl=0.25\n",
+    "    for x in range(15):\n",
+    "        os.system(\"python Patched_TF.py \"+op.cmd())\n",
+    "\n",
+    "    op.USEQUEUE=0\n",
+    "    op.Q=1\n",
+    "    op.K=32\n",
+    "    op.kl=0.0\n",
+    "    for x in range(15):\n",
+    "        os.system(\"python Patched_TF.py \"+op.cmd())\n",
+    "\n",
+    "\n",
+    "\n",
+    "    op.USEQUEUE=1\n",
+    "    op.Q=8\n",
+    "    op.K=16\n",
+    "    op.kl=0.5\n",
+    "    for x in range(15):\n",
+    "        os.system(\"python Patched_TF.py \"+op.cmd())\n",
+    "\n",
+    "    op.USEQUEUE=1\n",
+    "    op.Q=8\n",
+    "    op.K=16\n",
+    "    op.kl=0.25\n",
+    "    for x in range(15):\n",
+    "        os.system(\"python Patched_TF.py \"+op.cmd())\n",
+    "\n",
+    "    op.USEQUEUE=0\n",
+    "    op.Q=1\n",
+    "    op.K=16\n",
+    "    op.kl=0.0\n",
+    "    for x in range(15):\n",
+    "        os.system(\"python Patched_TF.py \"+op.cmd())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ad96476d",
    "metadata": {
     "scrolled": false
@@ -1104,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "f34a36d5",
    "metadata": {},
    "outputs": [
@@ -1114,8 +1135,8 @@
      "text": [
       "Training. . .\n",
       "Output folder path established\n",
-      "-0.40522 64\n",
-      "0,2.55|28,-0.37|53,-0.38|78,-0.40|103,-0.40|128,-0.40|153,-0.41|178,-0.40|203,-0.41|229,-0.41|254,-0.41|279,-0.41|304,-0.40|330,-0.41|355,-0.41|380,-0.41|405,-0.41|431,-0.41|457,-0.41|482,-0.41|508,-0.41|534,-0.41|559,-0.41|585,-0.41|610.4869220256805 12000\n"
+      "-0.38052 256\n",
+      "1,2.92|527,-0.35|1150,-0.35|1719,-0.38|2143,-0.38|2737,-0.38|3312,-0.38|3954,-0.38|4581,-0.38|5239,-0.38|5800,-0.38|6438,-0.38|7072,-0.38|7724,-0.38|8370,-0.38|8996,-0.38|9724,-0.38|10385,-0.38|"
      ]
     }
    ],
@@ -1129,19 +1150,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "66bf7a1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1/0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fc3af53",
+   "metadata": {},
+   "source": [
+    "# Test Class for the patch transformer which makes sure all probabilities are consistent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f02e0934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class testPTF(PatchTransformerB):\n",
+    "    \"\"\"Just adds some functions which make sure all probability labels are consistent\"\"\"\n",
+    "    def __init__(self,Lx,**kwargs):\n",
+    "        super(testPTF,self).__init__(Lx,**kwargs)\n",
+    "        self.reset(1)\n",
+    "#functions below aren't really necessary anymore since there was no issue with masking (they serve to avoid using a mask)\n",
+    "    def reset(self,B):\n",
+    "        # type: (int) -> Tensor\n",
+    "        \"\"\"Setup for an autoregressive transformer\"\"\"\n",
+    "        self._input = torch.zeros([self.L+1,B,4],device=self.device)\n",
+    "        self._i=1\n",
+    "        encoded_input = self.pe(self._input[:self._i,:,:])\n",
+    "        output,self._cache = self.next_with_cache(encoded_input,None)\n",
+    "        probs=self.lin(output[-1,:,:])\n",
+    "        return probs\n",
+    "    def getnext(self,vect):\n",
+    "        # type: (Tensor) -> Tensor\n",
+    "        \"\"\"Get probability for the next output in an autoregressive transformer\"\"\"\n",
+    "        self._input[self._i]=vect\n",
+    "        self._i+=1\n",
+    "        encoded_input = self.pe(self._input[:self._i,:,:])\n",
+    "        output,self._cache = self.next_with_cache(encoded_input,self._cache)\n",
+    "        probs=self.lin(output[-1,:,:])\n",
+    "        return probs\n",
+    "    @torch.jit.export\n",
+    "    def testsample(self,B):\n",
+    "        # type: (int) -> Tuple[Tensor,Tensor]\n",
+    "        \"\"\"Generate states with their probabilities in logscale\"\"\"\n",
+    "        #set up variables\n",
+    "        L=self.L\n",
+    "        probs=self.reset(B).squeeze(0)\n",
+    "        sprobs=torch.zeros([B],device=self.device)\n",
+    "        samples = torch.zeros([B,L,4],device=self.device)\n",
+    "        with torch.no_grad():\n",
+    "          for idx in range(L):\n",
+    "            #loop through L sequence elements and generate next in sequence based off of probabilities\n",
+    "            #sample from the probability distribution\n",
+    "            indices = torch.multinomial(probs,1,False).squeeze(1)\n",
+    "            #extract samples\n",
+    "            sample = self.options[indices]\n",
+    "            #set input to the sample that was actually chosen\n",
+    "            samples[:,idx] = sample\n",
+    "            real=patch2onehot(sample)\n",
+    "            total = torch.sum(real*probs,dim=-1)\n",
+    "            sprobs+=torch.log(total)\n",
+    "            if idx!=L-1: probs = self.getnext(sample)\n",
+    "                \n",
+    "        return unpatch(samples,self.Lx).unsqueeze(-1),sprobs\n",
+    "    \n",
+    "    @torch.jit.export\n",
+    "    def testlabels(self,samples,B):\n",
+    "        # type: (Tensor,int) -> Tuple[Tensor,Tensor]\n",
+    "        \"\"\"Get logscale probabilities of all states with one spin flipped at position j\"\"\"\n",
+    "        with torch.no_grad():\n",
+    "            #print(\"|\",end=\"\")\n",
+    "            L=self.L\n",
+    "            orig=samples\n",
+    "            samples=patch(samples.squeeze(-1),self.Lx)\n",
+    "            \n",
+    "            logprobs=torch.zeros([B,L*4],device=self.device)\n",
+    "            for k in range(L*4):\n",
+    "                #loop cross L flipped states (batched)\n",
+    "                probs=self.reset(B).squeeze(0)\n",
+    "                sprobs = torch.zeros([B],device=self.device)\n",
+    "                #loop across sequence\n",
+    "                for idx in range(L):\n",
+    "                    \n",
+    "                    sample = samples[:,idx] \n",
+    "                    #kth state is flipped\n",
+    "                    if idx==k//4:\n",
+    "                        #multiply by 1 as a way to copy the tensor to new memory\n",
+    "                        sample=sample*1.0\n",
+    "                        sample[:,k%4] = 1-sample[:,k%4]\n",
+    "                    real=patch2onehot(sample)\n",
+    "                    sprobs+=torch.log(torch.sum(real*probs,dim=-1))\n",
+    "                    if idx!=L-1: probs = self.getnext(sample)\n",
+    "                logprobs[:,k]=sprobs\n",
+    "        return orig,logprobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fdd565c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "#mydir = setup_dir(op)\n",
-    "#tst=torch.jit.load(mydir+\"/T\")"
+    "#mydir = \"PTF/Rydberg/64-NoQ-B=128-K=128-Nh=128-kl=0.00/0\"#\n",
+    "mydir = \"PTF/Rydberg/576-NoQ-B=256-K=256-Nh=128-kl=0.00/0\"\n",
+    "\n",
+    "op.L=576\n",
+    "Lx=24\n",
+    "tst=torch.jit.load(mydir+\"/T\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "376ad572",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tesTF = testPTF(24,Nh=op.Nh,num_layers=2)\n",
+    "tesTF = torch.jit.script(tesTF)\n",
+    "momentum_update(0,tesTF,tst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f226335",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if tesTF.Lx==8:\n",
+    "    s,p = tesTF.testsample(8)\n",
+    "\n",
+    "    print(p)\n",
+    "    print(tesTF.logprobability(s))\n",
+    "\n",
+    "    s2,p2=tesTF.testlabels(s,8)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    s3,p3=tesTF._off_diag_labels(s,8,64,False,1)\n",
+    "\n",
+    "    print(s.shape,s2.shape,p2.shape,p3.shape)\n",
+    "\n",
+    "    print(torch.sum(p3,dim=-1)/64)\n",
+    "    print(torch.sum(p2,dim=-1)/64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "486573b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "op.K=256\n",
+    "op.Q=32\n",
+    "op.B=op.K*op.Q\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Hamiltonian parameters\n",
+    "N = op.L   # Total number of atoms\n",
+    "V = 7.0     # Strength of Van der Waals interaction\n",
+    "Omega = 1.0 # Rabi frequency\n",
+    "delta = 1.0 # Detuning \n",
+    "\n",
+    "if op.hamiltonian==\"Rydberg\":\n",
+    "    Lx=Ly=int(op.L**0.5)\n",
+    "    op.L=Lx*Ly\n",
+    "    h = Rydberg(Lx,Ly,V,Omega,delta)\n",
+    "else:\n",
+    "    #hope for the best here since there aren't defaults\n",
+    "    h = TFIM(op.L,op.h,op.J)\n",
+    "\n",
+    "\n",
+    "E_queue = torch.zeros([op.B],device=device)\n",
+    "def fill_queue(net):\n",
+    "    for i in range(op.Q):\n",
+    "        print(\"|\",end=\"\")\n",
+    "        if False:\n",
+    "            sample,lp = net.testsample(op.K)\n",
+    "            _,probs= net.testlabels(sample,op.K)\n",
+    "            sqrtp=probs.mean(dim=1)/2\n",
+    "            sump = torch.exp(probs/2-sqrtp.unsqueeze(1)).sum(dim=1)  \n",
+    "        else:\n",
+    "            sample,sump,sqrtp = net.sample_with_labelsALT(op.K,op.L,grad=False,nloops=144)\n",
+    "            with torch.no_grad():\n",
+    "                lp=net.logprobability(sample)\n",
+    "                \n",
+    "        with torch.no_grad():\n",
+    "            E_i=h.localenergyALT(sample,lp,sump,sqrtp)\n",
+    "            E_queue[i*op.K:(i+1)*op.K]=E_i\n",
+    "t=time.time()\n",
+    "fill_queue(tesTF)\n",
+    "print(time.time()-t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52fdea19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def errformat(m,s):\n",
+    "    exp = -int(np.floor(np.log(s)/np.log(10)))\n",
+    "    print( str(round(m,exp))+\" +/- \"+str(round(s,exp)))\n",
+    "\n",
+    "var,mean = torch.var_mean(E_queue/op.L)\n",
+    "\n",
+    "print(h.ground(),op.B)\n",
+    "stdv=((var/op.B)**0.5).item()\n",
+    "errformat(mean.item(),stdv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6c42b31",
    "metadata": {},
    "outputs": [],
    "source": []
