Added PTFRNN model file

--- a/PTFRNN.ipynb
+++ b/PTFRNN.ipynb
@@ -101,15 +101,28 @@
     "class PTFRNN(Sampler):#(torch.jit.ScriptModule):\n",
     "    TYPES={\"GRU\":nn.GRU,\"ELMAN\":nn.RNN,\"LSTM\":nn.LSTM}\n",
     "    \"\"\"\n",
-    "    Base class for the two patch transformer architectures \n",
     "    \n",
-    "    Architexture wise this is how a patched transformer works:\n",
+    "    Sampler class which uses a transformer for long term information and an RNN for short term information.\n",
     "    \n",
-    "    You give it a (2D) state and it patches it into groups of 4 (think of a 2x2 cnn filter with stride 2). It then tells you\n",
-    "    the probability of each patch given it and all previous patches in your sequence using masked attention.\n",
+    "    The sequence is broken into 2D patches (4x4 by default), each patch is expanded to a tensor of size Nh (be repeating it),\\\n",
+    "    then a positional encoding is added. You then apply masked self-attention to the patches num_layers times, with the final\n",
+    "    outputs fed in as the initial hidden state of an rnn.\n",
     "    \n",
-    "    Outputs should either be size 1 (the probability of the current patch which is input) or size 16 (for 2x2 patches where \n",
-    "    the probability represented is of each potential patch)\n",
+    "    Going with 4x4 patches, you can use these patches as a sequence to get a factorized probability of the entire\n",
+    "    4x4 patch by feeding the 2x2 patches in one at a time and outputting a size 16 tensor \n",
+    "    (probability of all possible next 2x2 patches) for each patch. The output is obtained by applying two FC layers to\n",
+    "    the hidden state of the rnn.\n",
+    "    \n",
+    "    \n",
+    "    Here is an example of how everything comes together\n",
+    "    \n",
+    "    Say you have a 16x16 input and Nh=128, this input is broken into 16 4x4 patches which are repeated 8 times and\n",
+    "    given a positional encoding. Masked self attention is done between the 16 patches (size Nh) for N layers, then\n",
+    "    16 RNNs are given the outputs in parallel as the hidden state. Now the original input is broken into 16 sets of 4 2x2\n",
+    "    patches. These length 4 sequences are given to the rnns (16 in parallel all sharing the same weights) and the outputs\n",
+    "    are then grouped together such that you end up with a length 64 sequence of vectors of size 16. this gives your probability.\n",
+    "    You can easily calculate it by taking the output (of 16) corresponding to each 2x2 patch and multiplying all 64 of them\n",
+    "    together (or adding them in logscale).\n",
     "    \n",
     "    \"\"\"\n",
     "    def __init__(self,Lx,px=4,device=device,Nh=128,dropout=0.0,num_layers=2,nhead=8,rnn_patch=4,rnntype=\"GRU\", **kwargs):\n",
@@ -589,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "5c4cd515",
    "metadata": {},
    "outputs": [
@@ -597,14 +610,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L                             \t\t\t256\n",
+      "L                             \t\t\t1024\n",
       "Q                             \t\t\t1\n",
       "K                             \t\t\t256\n",
       "B                             \t\t\t256\n",
       "TOL                           \t\t\t0.15\n",
       "M                             \t\t\t0.9\n",
       "USEQUEUE                      \t\t\t0\n",
-      "NLOOPS                        \t\t\t16\n",
+      "NLOOPS                        \t\t\t64\n",
       "hamiltonian                   \t\t\tRydberg\n",
       "steps                         \t\t\t12000\n",
       "dir                           \t\t\tPTFRNN\n",
@@ -617,7 +630,7 @@
    ],
    "source": [
     "op=Opt()\n",
-    "Lx=16\n",
+    "Lx=32\n",
     "op.L=Lx*Lx\n",
     "op.Nh=128\n",
     "op.lr=5e-4\n",
@@ -632,8 +645,29 @@
     "#op.steps=4000\n",
     "op.dir=\"PTFRNN\"\n",
     "#op.steps=100\n",
-    "op.NLOOPS=16\n",
+    "op.NLOOPS=64\n",
     "print(op)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b1525e89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"python PTFRNN.py \"+op.cmd())"
    ]
   },
   {
