--- a/Patched-TF.ipynb
+++ b/Patched-TF.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda:0\n"
+      "cuda:0 _CudaDeviceProperties(name='NVIDIA GeForce RTX 3080 Ti', major=8, minor=6, total_memory=12287MB, multi_processor_count=80)\n"
      ]
     }
    ],
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "f27c6cf5",
    "metadata": {},
    "outputs": [
@@ -1233,14 +1233,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L                             \t\t\t256\n",
-      "Q                             \t\t\t1\n",
-      "K                             \t\t\t256\n",
+      "L                             \t\t\t1024\n",
+      "Q                             \t\t\t2\n",
+      "K                             \t\t\t128\n",
       "B                             \t\t\t256\n",
       "TOL                           \t\t\t0.15\n",
       "M                             \t\t\t0.9\n",
       "USEQUEUE                      \t\t\t0\n",
-      "NLOOPS                        \t\t\t32\n",
+      "NLOOPS                        \t\t\t256\n",
       "hamiltonian                   \t\t\tRydberg\n",
       "steps                         \t\t\t12000\n",
       "dir                           \t\t\tPTF\n",
@@ -1253,13 +1253,13 @@
    ],
    "source": [
     "op=Opt()\n",
-    "Lx=16\n",
+    "Lx=32\n",
     "op.L=Lx*Lx\n",
     "op.Nh=128\n",
     "op.lr=5e-4\n",
     "op.M=0.9\n",
-    "op.Q=1\n",
-    "op.K=256\n",
+    "op.Q=2\n",
+    "op.K=128\n",
     "op.USEQUEUE=0\n",
     "op.kl=0.0\n",
     "#op.apply(sys.argv[1:])\n",
@@ -1268,7 +1268,7 @@
     "#op.steps=4000\n",
     "op.dir=\"PTF\"\n",
     "#op.steps=100\n",
-    "op.NLOOPS=32\n",
+    "op.NLOOPS=256\n",
     "print(op)"
    ]
   },
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "ad96476d",
    "metadata": {
     "scrolled": false
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "985e6c09",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "f34a36d5",
    "metadata": {},
    "outputs": [
@@ -1344,8 +1344,9 @@
      "text": [
       "Training. . .\n",
       "Output folder path established\n",
-      "-0.38052 256\n",
-      "1,2.67|438,-0.34|892,-0.35|1322,-0.37|1732,-0.38|2123,-0.38|2514,-0.38|2905,-0.38|3296,-0.38|3687,-0.38|4078,-0.38|4469,-0.37|4860,-0.38|5251,-0.38|5642,-0.38|6032,-0.38|6423,-0.38|6814,-0.38|7205,-0.38|7595,-0.38|7986,-0.38|8377,-0.38|8768,-0.38|9158,-0.38|9548.540569782257 12000\n"
+      "-0.3687 1024\n",
+      "17,3.05|\n",
+      "7199,-0.33|14369,-0.33|21510,-0.34|28656,-0.34|35800,-0.37|"
      ]
     }
    ],
