--- a/TransformerSampler.ipynb
+++ b/TransformerSampler.ipynb
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "7403eb30",
    "metadata": {},
    "outputs": [
@@ -523,27 +523,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef896757",
+   "execution_count": 7,
+   "id": "7f1cce41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.system(\"python TF.py \"+op.cmd())"
+    "#os.system(\"python TF.py \"+op.cmd())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "616bd3f6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'L=64 Q=1 K=16 B=16 TOL=0.15 M=0.9 USEQUEUE=0 NLOOPS=16 hamiltonian=Rydberg steps=12000 dir=TF Nh=128 lr=0.0005 kl=0.0'"
+       "'L=256 Q=1 K=256 B=256 TOL=0.15 M=0.9 USEQUEUE=0 NLOOPS=64 hamiltonian=Rydberg steps=12000 dir=TF Nh=128 lr=0.0005 kl=0.0'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,49 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "8e6e1919",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "op.kl=0.0\n",
-    "for x in range(5):\n",
-    "    os.system(\"python TF.py \"+op.cmd())\n",
-    "    \n",
-    "op.kl=0.25\n",
-    "for x in range(5):\n",
-    "    os.system(\"python TF.py \"+op.cmd())\n",
-    "    \n",
-    "op.kl=0.5\n",
-    "for x in range(5):\n",
-    "    os.system(\"python TF.py \"+op.cmd())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
-   "id": "7c4c03d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-9e1622b385b6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
-     ]
-    }
-   ],
-   "source": [
-    "1/0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2f9a845c",
    "metadata": {},
    "outputs": [],
@@ -613,7 +571,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "2103fa8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref=torch.load(\"E:\\SharedContent\\\\NN-QSR\\\\TF\\\\Rydberg\\\\256-NoQ-B=256-K=256-Nh=128-kl=0.00\\\\0\\\\T\")\n",
+    "dbg = np.load(\"E:\\SharedContent\\\\NN-QSR\\\\TF\\\\Rydberg\\\\256-NoQ-B=256-K=256-Nh=128-kl=0.00\\\\0\\\\DEBUG.npy\")\n",
+    "op.steps = 12000 - dbg.shape[0]\n",
+    "momentum_update(0,trainsformer,ref)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "11b25cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5210"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "op.steps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "801d1ef9",
    "metadata": {
     "scrolled": false
@@ -636,22 +628,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1119cc12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1795713\n"
+     ]
+    }
+   ],
    "source": [
     "print(sum (p.numel () for p in trainsformer.parameters ()))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "f415335d",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training. . .\n",
+      "Output folder path established\n",
+      "-0.38052 256\n",
+      "4,-0.38|2121,-0.38|4216,-0.38|6313,-0.38|8410,-0.38|10507,-0.38|12604,-0.38|14702,-0.38|16799,-0.38|18897,-0.38|20993,-0.38|21869.532111406326 5210\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "if op.USEQUEUE:\n",
@@ -664,10 +675,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "8d09b05f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-9e1622b385b6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
     "1/0"
    ]
