Updated documentation in results notebook

--- a/Results.ipynb
+++ b/Results.ipynb
@@ -32,6 +32,7 @@
     "    Inputs:\n",
     "        fn - The directory name you want to get all the folder paths from\n",
     "        include - a list of keystrings which must be included in any path you search\n",
+    "        alldir - if set to true, subdirectories of a valid path are included\n",
     "    Outputs:\n",
     "        A dictionary of L:[paths] pairs.\n",
     "    \"\"\"\n",
@@ -76,6 +77,25 @@
     "            \n",
     "\n",
     "def graphs(allpaths,useTimes=False, metric=\"Sample\",label_idx=1,err=False,smoothing=100):\n",
+    "    \"\"\"\n",
+    "    Inputs:\n",
+    "        allpaths - a dictionary where keys are Lattice sizes and values are lists of paths\n",
+    "        \n",
+    "        useTimes (bool) - False if you want to use training steps and True if you want to use computation time\n",
+    "        \n",
+    "        metric (string) - What evaluation metric to use, this should usually be set to sample\n",
+    "        \n",
+    "        label_idx (int or int[]) - Folder parameters are separated by - signs and label_idx takes the folder name\n",
+    "            and uses it to create graph labels. A decent usecase is to append a -<Name> to the end of you folder and\n",
+    "            set label_idx to -1 in order to just have your input <Name> as the label for the specific graph\n",
+    "        \n",
+    "        err (bool) - when true results are plotted with errorbars, when false they are instead plotted in logscale\n",
+    "        \n",
+    "        smoothing (int) - used for smoothing out the graph. Set to 1 for the raw data, and n for data smoothed by\n",
+    "            averaging each points with the next n-1 points ahead of it (size n moving average)\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
     "    idx = {\"SAMPLE\":5,\"CORRECTED\":3,\"TRAIN\":1}[metric.upper()]\n",
     "    for key in sorted(allpaths.keys()):\n",
     "\n",
@@ -406,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "68da72cb",
+   "id": "95082a2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31288d1e",
+   "id": "cd12aa00",
    "metadata": {},
    "outputs": [],
    "source": []
