Added in energies.py to significantly reduce the dependencies needed in the results notebook

--- a/Results.ipynb
+++ b/Results.ipynb
@@ -26,7 +26,7 @@
     "import os\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "import RNN_QSR\n",
+    "import energies\n",
     "def getpaths(fn, include=[],alldir=False):\n",
     "    \"\"\"Looks in the directory folder and returns all paths in a dictionary which groups by system size\n",
     "    Inputs:\n",
@@ -102,8 +102,8 @@
     "        fig = plt.figure(1,figsize=(6,2.5), dpi=240, facecolor='w', edgecolor='k')\n",
     "        plt.title(\"L = %d %s Energy\"%(key,metric))\n",
     "        firstplot = True\n",
-    "        if key in RNN_QSR.TFIM.En1:\n",
-    "            exact_energy=RNN_QSR.TFIM.En1[key]\n",
+    "        if key in energies.TFIM.En1:\n",
+    "            exact_energy=energies.TFIM.En1[key]\n",
     "            \n",
     "            if err:\n",
     "                plt.ylim(-1e-3,5e-3)\n",
@@ -111,8 +111,8 @@
     "                plt.yscale(\"log\")\n",
     "                plt.ylim(1e-5,5)\n",
     "            \n",
-    "        elif key in RNN_QSR.Rydberg.E:\n",
-    "            exact_energy=RNN_QSR.Rydberg.E[key]\n",
+    "        elif key in energies.Rydberg.E:\n",
+    "            exact_energy=energies.Rydberg.E[key]\n",
     "            if False:\n",
     "                plt.ylim(-5e-3,1e-2)\n",
     "            elif err:\n",
@@ -125,7 +125,7 @@
     "            plt.ylim(-1.28,-1.25)\n",
     "            exact_energy=0\n",
     "\n",
-    "        print(key in RNN_QSR.Rydberg.E,exact_energy)\n",
+    "        print(key in energies.Rydberg.E,exact_energy)\n",
     "        bestmin=1e-5\n",
     "        ends=[]\n",
     "        for path in allpaths[key]:\n",
@@ -182,8 +182,8 @@
     "                    errplt(outs-exact_energy,errs,\"-\",lw=0.5,label=label,color=np.random.random([3]))\n",
     "                    plt.plot(outs*0,\"k--\",lw=0.2)\n",
     "                else:\n",
-    "                    if key in RNN_QSR.Rydberg.Err and firstplot:\n",
-    "                        delta=RNN_QSR.Rydberg.Err[key]\n",
+    "                    if key in energies.Rydberg.Err and firstplot:\n",
+    "                        delta=energies.Rydberg.Err[key]\n",
     "                        plt.plot(outs*0+delta,\"k--\",lw=0.2,label=\"Error\")\n",
     "                    x = plt.plot(outs-exact_energy,'o',ms=0.5,lw=0.0,label=label)\n",
     "                    plt.plot(exact_energy-avgs,'o',ms=1.5,c=x[0]._get_markerfacecolor(),alpha=0.1,markeredgewidth=0.2,markeredgecolor=\"black\")\n",
@@ -193,8 +193,8 @@
     "        print()\n",
     "        if useTimes:\n",
     "            \n",
-    "            if key in RNN_QSR.Rydberg.Err and not err:\n",
-    "                delta=RNN_QSR.Rydberg.Err[key]\n",
+    "            if key in energies.Rydberg.Err and not err:\n",
+    "                delta=energies.Rydberg.Err[key]\n",
     "                plt.plot([0,np.max(ends)],[delta,delta],\"k--\",lw=0.2,label=\"Error\")\n",
     "                \n",
     "            plt.xlim(0,np.max(ends))\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "95082a2d",
+   "id": "f5d8287e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd12aa00",
+   "id": "4e09f870",
    "metadata": {},
    "outputs": [],
    "source": []
