Updated results notebook

--- a/Results.ipynb
+++ b/Results.ipynb
@@ -210,15 +210,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e60d60c7",
+   "id": "7c0786ca",
    "metadata": {},
    "source": [
     "# Usage:\n",
     "\n",
-    "- getpaths works similar to a query:\n",
-    "    Select X\n",
-    "    From fn\n",
-    "    Where every string in include is a substring of X\n",
+    "- getpaths works similar to a query:<br>\n",
+    "    Select X<br>\n",
+    "    From fn<br>\n",
+    "    Where every string in include is a substring of X<br><br>\n",
     "    \n",
     "- getpaths returns a dictionary of arrays where keys are system sizes.\n",
     "\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "id": "a7167d9d",
    "metadata": {},
    "outputs": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4338f998",
+   "id": "7507524c",
    "metadata": {},
    "source": [
     "# The regular transformer run was stopped and then continued so I had to manually combine the results"
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2243aa71",
+   "id": "a7efa1cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,8 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "aa9544f5",
+   "execution_count": 52,
+   "id": "b24235ae",
    "metadata": {},
    "outputs": [
     {
@@ -448,21 +448,19 @@
        "0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "for \n",
-    "\n",
-    "os.system(\"python ModelTester.py %s\\\\0 1024\"%[0])"
+    "os.system(\"python ModelTester.py %s\\\\1 1024\"%getpaths(\"PRNN\\\\Rydberg\",[\"256\",\"666\"])[256][0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76ec4275",
+   "id": "9133d62b",
    "metadata": {},
    "outputs": [],
    "source": []
