Completed all models

--- a/BaseModels.py.ipynb
+++ b/BaseModels.py.ipynb
@@ -1798,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "86e12de5",
+   "id": "cb82bd14",
    "metadata": {},
    "outputs": [
     {
@@ -1820,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d8a19584",
+   "id": "3f9f815b",
    "metadata": {},
    "outputs": [
     {
@@ -1840,8 +1840,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "15844bad",
+   "execution_count": 37,
+   "id": "e3044b82",
    "metadata": {},
    "outputs": [
     {
@@ -1850,19 +1850,19 @@
        "0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.system(\"python PTF.py hamiltonian=TFIM L=500 NLOOPS=125 h=-1 J=1 patch=4\")"
+    "os.system(\"python PTF.py hamiltonian=TFIM L=500 NLOOPS=125 h=-1 J=1 patch=4 sgrad=False\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "91b0ab71",
+   "execution_count": 36,
+   "id": "592410f9",
    "metadata": {},
    "outputs": [
     {
@@ -1871,19 +1871,40 @@
        "0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.system(\"python PTF.py hamiltonian=Rydberg L=576 NLOOPS=144 patch=4 _2D=True\")"
+    "os.system(\"python PTF.py hamiltonian=TFIM L=120 NLOOPS=30 h=-1 J=1 patch=4 steps=100\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "782650dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system(\"python PTF.py hamiltonian=TFIM L=100 NLOOPS=25 h=-1 J=1 patch=2 K=256 _2D=True\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60934841",
+   "id": "b3eff2ee",
    "metadata": {},
    "outputs": [],
    "source": []
